Fix icon alignment, update storybook links

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -36,6 +36,10 @@
     text-transform: uppercase;
     letter-spacing: .75rem;
     margin: 0;
+    display: flex;
+    gap: .75rem;
+    align-items: center;
+    margin-bottom: .25rem;
 
     @media (max-width: 1000px) {
         font-size: 1rem;
